--- a/templates/mvc.html
+++ b/templates/mvc.html
@@ -1,8 +1,8 @@
 <HTML>
     <form action="gravar" method="POST">
     <input type="text" name="nome"/>
-    <input type="text" name="cpf"/>
-    <input type="text" name="endereco"/>
+    <input type="text" name="preco"/>
+    <input type="text" name="categoria"/>
     <input type="submit" valie="enviar" />
     </form>
     
