--- a/templates/mvc.html
+++ b/templates/mvc.html
@@ -3,7 +3,7 @@
     <input type="text" name="nome"/>
     <input type="text" name="preco"/>
     <input type="text" name="categoria"/>
-    <input type="submit" valie="enviar" />
+    <input type="submit" value="enviar" />
     </form>
     
     </HTML>
